prometheus-federation/prometheus-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-fed
  namespace: monitoring
  labels:
    k8s-app: prometheus-fed
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    k8s-app: prometheus-fed
  type: ClusterIP
